--- a/pom.xml
+++ b/pom.xml
@@ -265,6 +265,11 @@
             <artifactId>jsr250-api</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.slyak</groupId>
+            <artifactId>spring-data-jpa-extra</artifactId>
+            <version>1.2.0.RELEASE</version>
+        </dependency>
 
     </dependencies>
     <build>
